team/output/BD_2384_2390_2412/327/2/0/op.txt
  File "/home/ubuntu/test-bigdata/adminmgr/media/code/A2/python/task/BD_2384_2390_2412_69rlG7m.py", line 16
    yield(n, current_rank/batsman_num)
        ^
IndentationError: expected an indented block
